# irdest

./: .envrc  .gitattributes  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.swp  .mailmap  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.md.license  Cargo.lock.license  Cargo.toml  README.md  build.rs  config.toml  config2.kdl  default.nix  deny.toml  deploy.sh  id_lelka.json  msg.txt  notes.md  shell.nix
clients/hubd/: Cargo.toml  README.md
clients/hubd/src/: cfg.rs  log.rs  main.rs  state.rs  upnp.rs
clients/irdest-echo/: Cargo.toml
clients/irdest-echo/src/: main.rs
clients/irdest-mblog/: Cargo.toml  build.rs
clients/irdest-mblog/proto/: db.proto  feed.proto
clients/irdest-mblog/resources/: new-ui.txt  resources.gresources.xml  window.ui
clients/irdest-mblog/src/: lib.rs  lookup.rs
clients/irdest-proxy/: Cargo.toml
clients/irdest-proxy/src/: config.rs  inlet.rs  io.rs  lib.rs  main.rs  outlet.rs  proto.rs  server.rs  test.rs
clients/irpc-client/: Cargo.toml
clients/irpc-client/src/: main.rs
clients/qaul-gtk/: Cargo.toml
clients/qaul-gtk/src/: main.rs
clients/qrpc-client/: Cargo.toml
clients/qrpc-client/src/: main.rs
clients/ratman-tools/: Cargo.toml  input.txt  rats.ascii
clients/ratman-tools/src/: addr.rs  base_args.rs  lib.rs  peers.rs  recv.rs  send.rs  space.rs  status.rs  stream.rs
docs/: README.md  (+3 more)
firmware/lora-modem/: .gitignore  Cargo.toml  memory.x  shell.nix
firmware/lora-modem/.cargo/: config
firmware/lora-modem/src/: main.rs
irdest-core/: Cargo.toml
irdest-core/src/: contacts.rs  discover.rs  error.rs  ird.rs  lib.rs  rpc.rs
irdest-core/src/api/: contacts.rs  messages.rs  mod.rs  services.rs  users.rs
irdest-core/src/auth/: pwhash.rs
irdest-core/src/ffi/: mod.rs
irdest-core/src/helpers/: dirs.rs  mod.rs
irdest-core/src/messages/: generator.rs  mod.rs  store.rs
irdest-core/src/services/: mod.rs  store.rs
irdest-core/src/store/: messages.rs  mod.rs  services.rs  users.rs
irdest-core/src/users/: mod.rs  store.rs
irdest-core/tests/: messages.rs  storage.rs  subscriptions.rs  users.rs
irdest-core/tests/harness/: mod.rs
irdest-core/types/: Cargo.toml
irdest-core/types/src/: error.rs  lib.rs  services.rs  users.rs
libqaul/types/: Cargo.toml  build.rs
libqaul/types/schema/: types.capnp
libqaul/types/src/: contacts.rs  diff.rs  error.rs  lib.rs  messages.rs  services.rs  users.rs
netmods/netmod-datalink/: Cargo.toml
netmods/netmod-datalink/src/: lib.rs  socket.rs
netmods/netmod-fuzz/: Cargo.toml
netmods/netmod-fuzz/fuzz/: Cargo.toml
netmods/netmod-fuzz/src/: lib.rs
netmods/netmod-inet/: Cargo.toml  README.md
netmods/netmod-inet/src/: lib.rs  peer.rs  proto.rs  resolve.rs  routes.rs  server.rs  session.rs
netmods/netmod-lan/: Cargo.toml  README.md  test.py
netmods/netmod-lan/src/: addrs.rs  framing.rs  lib.rs  socket.rs
netmods/netmod-lora/: Cargo.toml  LoRa Packet Format.md  README.md
netmods/netmod-lora/src/: lib.rs
netmods/netmod-mem/: Cargo.toml
netmods/netmod-mem/src/: io.rs  lib.rs  media.rs
netmods/netmod-mem/tests/: basic.rs  broadcast.rs
netmods/netmod-tcp/: Cargo.toml
netmods/netmod-tcp/src/: error.rs  io.rs  lib.rs  peer.rs  ptr.rs  resolve.rs  server.rs
netmods/netmod-udp/: Cargo.toml
netmods/netmod-udp/src/: lib.rs  socket.rs
netmods/netmod-wd/: Cargo.toml  README.md
netmods/netmod-wd/src/: lib.rs
ratman/: Cargo.toml  README.md  ratmand.kdl  shell-deps.nix
ratman/benches/: architecture.rs
ratman/broken-benches/: architecture.rs
ratman/client-lib/: Cargo.toml
ratman/client-lib/src/: lib.rs
ratman/configure/: Cargo.toml
ratman/configure/src/: config.rs  lib.rs
ratman/dashboard/: .editorconfig  .eslintignore  .eslintrc.js  .gitignore  .prettierrc.js  .template-lintrc.js  README.md  ember-cli-build.js  mockup.css  mockup.html  package.json  shell-deps.nix  testem.js  yarn.lock.license
ratman/dashboard/app/: app.js  formats.js  index.html  router.js
ratman/dashboard/config/: ember-cli-update.json.license  ember-intl.js  environment.js  targets.js
ratman/dashboard/tests/: index.html  test-helper.js
ratman/dashboard/translations/: de.yaml  en.yaml
ratman/ffi/: Cargo.toml  ffi_mod.rs
ratman/ffi/src/: lib.rs
ratman/harness/: Cargo.toml
ratman/harness/src/: lib.rs
ratman/identity/: Cargo.toml
ratman/identity/src/: lib.rs
ratman/lib-client/: Cargo.toml  README.md
ratman/lib-client/src/: lib.rs
ratman/lib-netmod/: Cargo.toml
ratman/lib-netmod/src/: endpoint.rs  frame.rs  lib.rs  result.rs  seq.rs
ratman/lib-types/: Cargo.toml
ratman/lib-types/proto/: api.proto
ratman/lib-types/src/: api.rs  error.rs  frame.rs  id.rs  lib.rs  message.rs  seq.rs  timepair.rs
ratman/libratman/: Cargo.toml  README.md  build.rs  tests.rs
ratman/libratman/examples/: namespace.rs  simple_recv.rs  simple_send.rs
ratman/libratman/proto/: api.proto  frame.proto  message.proto
ratman/libratman/src/: endpoint.rs  lib.rs
ratman/migrations/: 20230703193526_init.sql
ratman/netmod/: Cargo.toml
ratman/netmod/src/: endpoint.rs  frame.rs
ratman/src/: cli.rs  clock.rs  context.rs  crypto.rs  data.rs  error.rs  journal.rs  lib.rs  links.rs  main.rs  protocol.rs  router.rs  scaffold.rs  slicer.rs  startup.rs  test.rs
ratman/src/api/: client.rs  clients.rs  connection.rs  io.rs  mod.rs  parse.rs  receiving.rs  send_util.rs  sending.rs  session.rs  state.rs
ratman/src/client/: mod.rs
ratman/src/config/: default.rs  helpers.rs  mod.rs  netmods.rs  peers.rs  ratmand-0.5.kdl
ratman/src/core/: dispatch.rs  drivers.rs  ingress.rs  journal.rs  links.rs  mod.rs  routes.rs  switch.rs
ratman/src/crypto/: mod.rs
ratman/src/daemon/: config.rs  error.rs  mod.rs  parse.rs  peers.rs  startup.rs  state.rs  transform.rs  upnp.rs
ratman/src/dispatch/: collector.rs  mod.rs  send.rs  slicer.rs
ratman/tests/: README.md  announce.rs  tcp_networking.rs  very_simple_chat.rs
ratman/tests-currently-broken/: announce.rs
ratman/types/: Cargo.toml  build.rs  shell-deps.nix
ratman/webui/: README.md  package.json  testem.js  yarn.nix
(+1079 files in other folders)
