# SPDX-FileCopyrightText: 2018-2022 Katharina Fey <kookie@spacekookie.de>
#
# SPDX-License-Identifier: CC0-1.0

[workspace]
members = [
    # The decentralised router
    "ratman",
    "ratman/libratman",
    # "ratman/lib-client",
    # "ratman/lib-netmod",
    # "ratman/lib-types",

    # Various utility crates
    "utils/clockctrl",
    "utils/eris-rs",
    # "utils/installer",
    # "utils/irdest-firmware-util",
    "utils/task-notify",
    "utils/tracing-syslog",
    # "utils/useful-netmod-bits",
    "utils/zbus-nm",

    # # Available netmod drivers
    # "netmods/netmod-fuzz",
    # "netmods/netmod-inet",
    # "netmods/netmod-lan",
    # "netmods/netmod-lora",
    # "netmods/netmod-mem",
    # "netmods/netmod-wd",
    # "netmods/netmod-datalink",

    # # End-user applications
    # "clients/android-vpn/jni",
    # "clients/irdest-echo",
    # "clients/irdest-mblog",
    # "clients/irdest-proxy",
]

exclude = [
    # Firmware abstractions and crates
    "firmware/lora-modem",
]
