[package]
name = "irdest-core"
description = "Abstraction for building services over internet independent networks"
version = "0.2.0"
authors = [ "Katharina Fey <kookie@spacekookie.de>"]
license = "AGPL-3.0"
edition = "2018"

[dependencies]
alexandria = { version = "0.2", path = "../utils/alexandria" }
ircore-types = { version = "0.1", path = "types" }
netmod-mem = { version = "0.4", path = "../netmods/netmod-mem", optional = true }
irpc-sdk = { version = "0.1", path = "../rpc-core/irpc-sdk", optional = true }
ratman = { version = "0.2", path = "../ratman" }

async-std = { version = "1.0", features = ["attributes", "unstable"] }
async-trait = "0.1"
base64 = "0.12"
bincode = "1.0"
blake2 = "0.8"
crossbeam-channel = "0.5"
futures = "0.3"
hex = "0.4"
jni = { version = "0.14", optional = true, default-features = false }
mime = "0.3"
rand = "0.7"
serde = { version = "1.0", features = [ "derive" ] }
sodiumoxide = "0.2.5"
tempfile = { version = "3.0", optional = true }
tracing = "0.1"
tracing-futures = "0.2"

log = "0.4" # FIXME: remove again!

[dev-dependencies]
ratman-harness = { path = "../ratman/harness" }
serde_json = "1.0"
tempfile = "3.0"

[features]
default = ["generate-message", "testing", "rpc"] # TODO: remove rpc default?
ffi-java = ["jni"]
generate-message = []
rpc = ["irpc-sdk"]
testing = ["tempfile", "netmod-mem"]
