# SPDX-FileCopyrightText: 2019-2022 Katharina Fey <kookie@spacekookie.de>
# SPDX-FileCopyrightText: 2022 embr <git@liclac.eu>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "ratman"
description = "A decentralised and peer-to-peer packet router"
license = "AGPL-3.0-or-later"
version = "0.4.0"
edition = "2018"

# Stand-alone ratman daemon binary
[[bin]]
name = "ratmand"
required-features = ["daemon"]

# A client tool to connect to the ratman daemon
[[bin]]
name = "ratcat"
required-features = ["util"]

[[bin]]
name = "ratctl"
required-features = ["util"]

[features]
default = ["daemon", "util", "prometheus-client"]

# Additional driver features
inet = ["netmod-inet"]
lan = ["netmod-lan"]
lora = ["netmod-lora"]

upnp = ["igd", "ipnetwork", "pnet"]
daemon = ["cli", "inet", "lan", "upnp", "syslog"]
util = ["cli", "ratman-client"]
cli = ["types", "clap", "directories", "nix", "serde_json", "tracing-subscriber"]
dashboard = ["daemon", "tide", "rust-embed", "openapi_type", "prometheus-client"]
syslog = ["tracing-syslog"]
android = []

[dependencies]
async-std = { version = "1.0", features = ["std", "unstable"] }
bincode = "1.0"
byteorder = "1.0"
chrono = { version = "0.4", features = ["serde"] }
protobuf = "2.19"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-futures = "0.2"
twox-hash = "1.5"

x25519-dalek = "2.0.0-pre.1"
ed25519-dalek = "1.0.0"
curve25519-dalek = "3.0.0"
rand = "0.7"

# Sub-components
clockctrl = { version = "0.1", path = "../utils/clockctrl" }
netmod = { version ="0.5.0", path = "lib-netmod", package = "ratman-netmod"}
task-notify = { version = "0.1", path = "../utils/task-notify" }

# Dependencies required for various binary targets
types = { version = "0.4.0", path = "lib-types", package = "ratman-types", optional = true }
ratman-client = { version = "0.4.0", path = "lib-client", optional = true }
clap = { version = "2.0", optional = true, features = ["wrap_help", "color", "suggestions"] }
tracing-subscriber = { version = "0.2", optional = true, features = ["fmt"] }
tracing-syslog = { version = "0.1", path = "../utils/tracing-syslog", optional = true }
directories = { version = "4.0.1", optional = true }
serde_json = { version = "1.0", optional = true }
nix = { version = "0.23", optional = true }
igd = { version = "=0.12", optional = true }       # These three crates are bound to an
ipnetwork = { version = "=0.18", optional = true } # older version becuase we don't want
pnet = { version = "=0.28", optional = true }      # to update to the 2021-edition yet
tide = { version = "0.16", optional = true }
rust-embed = { version = "6.3", optional = true }
openapi_type = { version = "0.4", optional = true }
prometheus-client = { version = "0.16", optional = true }
eris = { version = "0.1", path = "../utils/eris-rs" }

# Bundled network modules are all optional dependencies
netmod-inet = { path = "../netmods/netmod-inet", version = "0.4", optional = true }
netmod-lan = { path = "../netmods/netmod-lan", version = "0.2", optional = true }
netmod-lora = { path = "../netmods/netmod-lora", version = "0.1", optional = true }

[dev-dependencies]
bincode = "1.2"
netmod-inet = { path = "../netmods/netmod-inet", version = "*" }
netmod-mem = { path = "../netmods/netmod-mem", version = "0.4" }
tracing-subscriber = { version = "0.2", features = ["fmt"] }
