# SPDX-FileCopyrightText: 2019-2022 Katharina Fey <kookie@spacekookie.de>
# SPDX-FileCopyrightText: 2022 embr <git@liclac.eu>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "ratmand"
description = "A decentralised and peer-to-peer packet router"
license = "AGPL-3.0-or-later"
version = "0.5.0"
edition = "2018"

# Stand-alone ratman daemon binary
# [[bin]]
# name = "ratmand"
# required-features = ["daemon"]

# # A client tool to connect to the ratman daemon
# [[bin]]
# name = "ratcat"
# required-features = ["util"]

# [[bin]]
# name = "ratctl"
# required-features = ["util"]

# [features]
# default = ["daemon", "util", "prometheus-client"]

# # Additional driver features
# datalink = ["netmod-datalink"]
# inet = ["netmod-inet"]
# lan = ["netmod-lan"]
# lora = ["netmod-lora"]

# upnp = ["igd", "ipnetwork", "pnet"]
# daemon = ["cli", "datalink", "inet", "lan", "upnp", "syslog"]
# util = ["cli", "ratman-client"]
# cli = ["types", "clap", "directories", "nix", "serde_json", "tracing-subscriber"]
# dashboard = ["daemon", "tide", "rust-embed", "openapi_type", "prometheus-client"]
# syslog = ["tracing-syslog"]
# android = []

[dependencies]

## Core dependencies.  If you're not sure where to add something, put
## it here first.  Large clusters can then always be expanded later.
async-std = { version = "1.0", features = ["std", "unstable", "attributes"] }
bincode = "1.0"
byteorder = "1.0"
chrono = { version = "0.4", features = ["serde"] }
protobuf = "2.19"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
twox-hash = "1.5"

## Cryptography stuff
x25519-dalek = { version = "2.0.0-rc.2", features = ["static_secrets"] }
ed25519-dalek = "1.0.0"
curve25519-dalek = "3.0.0"
rand = "0.7"

## Logging and logging accessories
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.2", features = ["fmt"] }
tracing-syslog = { version = "0.1", path = "../utils/tracing-syslog" }

## Irdest and Ratman sub-components
libratman = { version = "0.5", path = "libratman", features = ["netmod"], package = "ratman" }
clockctrl = { version = "0.1", path = "../utils/clockctrl" }
task-notify = { version = "1.0", path = "../utils/task-notify" }

## Dependencies required for various binary targets
clap = { version = "2.0", features = ["wrap_help", "color", "suggestions"] }
directories = "4.0"
serde_json = "1.0"
# nix = { version = "0.23", optional = true }
# igd = { version = "=0.12", optional = true }       # These three crates are bound to an
# ipnetwork = { version = "=0.18", optional = true } # older version becuase we don't want
# pnet = { version = "=0.28", optional = true }      # to update to the 2021-edition yet
# tide = { version = "0.16", optional = true }
# rust-embed = { version = "6.3", optional = true }
# openapi_type = { version = "0.4", optional = true }
# prometheus-client = { version = "0.16", optional = true }
# async-eris = { version = "0.1", path = "../utils/eris-rs" }

## Bundled network modules are all optional dependencies
netmod-datalink = { path = "../netmods/netmod-datalink", version = "0.2" }
netmod-inet = { path = "../netmods/netmod-inet", version = "0.4" }
netmod-lan = { path = "../netmods/netmod-lan", version = "0.2" }
netmod-mem = { path = "../netmods/netmod-mem", version = "0.4" }
# netmod-lora = { path = "../netmods/netmod-lora", version = "0.1" }

# [dev-dependencies]
# bincode = "1.2"
# netmod-inet = { path = "../netmods/netmod-inet", version = "*" }
# tracing-subscriber = { version = "0.2", features = ["fmt"] }

# criterion = { version = "0.4", features = ["html_reports"] }
# rand = "0.7"

# [[bench]]
# name = "architecture"
# harness = false
