[package]
name = "irdest-hubd"
description = "A modular and easy to use internet overlay router for Irdest"
version = "0.2.0"
authors = ["Katharina Fey <kookie@spacekookie>", "Leonora Tindall <nora@nora.codes>"]
license = "AGPL-3.0-or-later"
edition = "2018"

[dependencies]
irdest-core = { path = "../../irdest-core" }
irpc-broker = { path = "../../rpc-core/irpc-broker" }
netmod-tcp = { path = "../../netmods/netmod-tcp" }
netmod-udp = { path = "../../netmods/netmod-udp" }
ratman = { path = "../../ratman" }
ratman-configure = { path = "../../ratman/configure" }

async-std = { version = "1.0", features = ["attributes"] }
clap = { version = "2.0", features = ["wrap_help", "color"] }
directories-next = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["fmt", "env-filter"] }
