# SPDX-FileCopyrightText: 2022 Katharina Fey <kookie@spacekookie.de>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "irdest-echo"
version = "0.1.0"
edition = "2018"

[dependencies]
ratman-client = { version = "0.4.0", path = "../../ratman/lib-client/" }
async-std = { version = "1.0", features = ["attributes"] }