# SPDX-FileCopyrightText: 2022 Katharina Fey <kookie@spacekookie.de>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "irdest-echo"
version = "0.1.0"
edition = "2018"

[dependencies]
libratman = { version = "0.6.0", path = "../../ratman/libratman" }
async-std = { version = "1.0", features = ["attributes"] }