# SPDX-FileCopyrightText: 2022 embr <hi@liclac.eu>
#
# SPDX-License-Identifier: CC0-1.0

[package]
name = "irdest-mblog"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "irdest-mblog-gtk"
required-features = [ "mblog-gtk" ]

[[bin]]
name = "irdest-mblog-recv"
required-features = [ "mblog-cli" ]

[[bin]]
name = "irdest-mblog-send"
required-features = [ "mblog-cli" ]

[features]
default = [ "proto" ]
proto = [ "protobuf", "protoc-rust" ]
mblog-gtk = [ "proto", "gtk", "once_cell" ]
mblog-cli = [ "clap" ]

[dependencies]
libratman = { version = "0.6.0", path = "../../ratman/libratman" }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
async-std = { version = "1.0", features = ["std", "unstable"] }
directories = { version = "4.0" }
protobuf = { version = "2.19", optional = true }
sled = { version = "0.34", features = ["compression"] }
tempdir = "0.3"

# CLI frontend only
clap = { version = "3.2", optional = true, features = ["derive", "wrap_help", "color", "suggestions"] }

# GTK frontend only
gtk = { version = "0.4.8", package = "gtk4", features = ["v4_6"], optional = true }
once_cell = { version = "1", optional = true }

[build-dependencies]
gtk = { version = "0.4.8", package = "gtk4", optional = true }
protoc-rust = { version = "2.19", optional = true }

[package.metadata.docs.rs]
no-default-features = true
