[package]
name = "irdest-proxy"
version = "0.1.0"
edition = "2018"

[dependencies]
ratman-client = { path = "../../ratman/client-lib", version = "0.4.0" }

async-std = { version = "1.0", features = ["attributes"] }
clap = "3.0.0"
directories = "4.0"
libc = "0.2"
serde = { version = "1.0", feature = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.2"