[package]
name = "irpc-client"
description = "Connect to an irpc broker to send and receive messages"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
irpc-sdk = { path = "../../rpc-core/irpc-sdk" }

async-std = { version = "1.0", features = ["attributes"] }
clap = "2.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["fmt"] }