[package]
name = "qaul-gtk"
description = "A basic GTK client for qaul"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
libqaul-sdk = { version = "0.1", path = "../../sdk/libqaul-sdk" }
gtk = "0.9"
relm = "0.21"
relm-derive = "0.21"