[package]
name = "qrpc-client"
description = "Connect to a QRPC broker to send and receive messages"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"

[dependencies]
qrpc-sdk = { path = "../../rpc-core/qrpc-sdk" }

async-std = { version = "1.0", features = ["attributes"] }
clap = "2.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.2", features = ["fmt"] }