[package]
name = "ratman-tools"
description = "Command-line utilities for interacting with ratmand"
version = "0.5.0"
edition = "2021"

[dependencies]
async-std = { version = "1.0", features = ["attributes"] }
clap = { version = "2.0", features = ["wrap_help", "color", "suggestions"] }
libratman = { version = "0.5.0", path = "../../ratman/libratman", package = "ratman" }
serde = { version = "1.0", features = ["derive"] }
directories = "4.0"