[package]
name = "ratman-tools"
description = "Command-line utilities for interacting with ratmand"
version = "0.6.0"
edition = "2021"

[dependencies]
libratman = { version = "0.6", path = "../../ratman/libratman" }

clap = { version = "4.0", features = ["wrap_help", "color", "suggestions", "cargo", "derive"] }
directories = "4.0"
nix = "0.23"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"