[package]
name = "lora-modem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "0.2"
sx127x_lora = "0.3"
cortex-m-semihosting = "0.5"
panic-semihosting = "0.6"

[dependencies.stm32f4xx-hal]
version = "0.13.2"
features = ["stm32f401"] # replace the model of your microcontroller here
