[package]
name = "ircore-types"
description = "libqaul type fascade"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
ratman-identity = { version ="0.6.0", path = "../../ratman/identity", features = ["random"] }
irpc-sdk = { version = "0.1", path = "../../rpc-core/irpc-sdk" }
serde = { version = "1.0", features = ["derive"] }
alexandria-tags = { version = "0.2", path = "../../utils/alexandria-tags" }
serde_json = "1.0"
async-trait = "0.1"

[dev-dependencies]
serde_json = "1.0"
bincode = "1.0"

[features]
# default = ["rpc"]
# rpc = []