[package]
name = "libqaul-types"
description = "libqaul type fascade"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"

[dependencies]
ratman-identity = { version ="0.6.0", path = "../../ratman/identity", features = ["random"] }
serde = { version = "1.0", features = ["derive"] }
alexandria-tags = { path = "../../utils/alexandria-tags" }

[build-dependencies]
capnpc = { version = "0.13", optional = true }


[features]
rpc = ["capnpc"]
