[package]
name = "libqaul-types"
description = "libqaul type fascade"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
ratman-identity = { version ="0.6.0", path = "../../ratman/identity", features = ["random"] }
qrpc-sdk = { path = "../../rpc-core/qrpc-sdk" }
serde = { version = "1.0", features = ["derive"] }
alexandria-tags = { path = "../../utils/alexandria-tags" }
# capnp = { version = "0.13", optional = true }
async-trait = "0.1"

# [build-dependencies]
# capnpc = { version = "0.13", optional = true }

[dev-dependencies]
serde_json = "1.0"
bincode = "1.0"

[features]
# default = ["rpc"]
# rpc = ["capnp", "capnpc"]