# SPDX-FileCopyrightText: 2019-2021 Katharina Fey <kookie@spacekookie.de>
#
# SPDX-License-Identifier: AGPL-3.0-or-later WITH LicenseRef-AppStore

[package]
name = "netmod-datalink"
description = "A layer 2 network discovery driver"
version = "0.2.0"
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
task-notify = { version = "1.0", path = "../../utils/task-notify" }
netmod = { version = "0.5.0", path = "../../ratman/lib-netmod", package = "ratman-netmod" }
ratman-types = { version = "0.4.0", path = "../../ratman/lib-types" }
useful-netmod-bits = { version = "0.1", path = "../../utils/useful-netmod-bits" }
zbus-nm = { version = "0.1", path = "../../utils/zbus-nm/" }

async-std = { version = "1.0", features = ["unstable"] }
async-trait = "0.1"
bincode = "1.0"
libc = "0.2"
pnet = "0.31.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
pnet_datalink = "0.31.0"
zbus = "3.1.0"
nix = "0.25.0"
