[package]
name = "netmod-fuzz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netmod = { version ="0.5.0", path = "../../ratman/lib-netmod", package = "ratman-netmod" }
bincode = "1.0"
async-std = { version = "1.0", features = ["attributes", "unstable"] }
async-trait = "0.1"

[dev-dependencies]
