[package]
name = "netmod-inet"
description = "An internet overlay netmod endpoint driver"
version = "0.4.0"
edition = "2018"
license = "AGPL-3.0"

[dependencies]
identity = { version = "0.6", path = "../../ratman/identity", package = "ratman-identity" }
netmod = { version ="0.5.0", path = "../../ratman/netmod", package = "ratman-netmod" }

async-std = { version = "1.0", features = ["attributes", "unstable"] }
async-trait = "0.1"
bincode = "1.0"
byteorder = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.2", features = ["fmt"] }