# SPDX-FileCopyrightText: 2019-2022 Katharina Fey <kookie@spacekookie.de>
#
# SPDX-License-Identifier: AGPL-3.0-or-later WITH LicenseRef-AppStore

[package]
name = "netmod-inet"
description = "An internet overlay netmod endpoint driver"
version = "0.4.0"
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
libratman = { version = "0.5", path = "../../ratman/libratman", features = ["netmod"], package = "ratman" }

async-std = { version = "1.0", features = ["attributes", "unstable"] }
async-trait = "0.1"
bincode = "1.0"
byteorder = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.2", features = ["fmt"] }