# SPDX-FileCopyrightText: 2019-2021 Katharina Fey <kookie@spacekookie.de>
#
# SPDX-License-Identifier: AGPL-3.0-or-later WITH LicenseRef-AppStore

[package]
name = "netmod-lan"
description = "A local network discovery driver"
version = "0.2.0"
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
task-notify = { version = "0.1", path = "../../utils/task-notify" }
netmod = { version ="0.5.0", path = "../../ratman/netmod", package = "ratman-netmod" }
identity = { version = "0.6", path = "../../ratman/identity", package = "ratman-identity" }

async-std = { version = "1.0", features = ["unstable"] }
async-trait = "0.1"
bincode = "1.0"
libc = "0.2"
pnet = "=0.28"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
