[package]
name = "netmod-lora"
description = "A LoRa radio driver"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
task-notify = { version = "1.0", path = "../../utils/task-notify" }
libratman = { version = "0.5.0", path = "../../ratman/libratman", package = "ratman" }
irdest-firmware-util = {version = "0.1.0", path = "../../utils/irdest-firmware-util"}

async-std = { version = "1.0", features = ["unstable"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
serialport = "4.2"
