[package]
name = "netmod-mem"
description = "A fully in-memory implementation of a netmod endpoint"
version = "0.4.0"
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
async-std = { version = "1.0", features = ["attributes", "unstable"] }
async-trait = "0.1"
libratman = { version = "0.5", path = "../../ratman/libratman", features = ["netmod"], package = "ratman" }
