[package]
name = "netmod-tcp"
description = "An internet overlay netmod endpoint driver"
version = "0.3.0"
authors = ["Katharina Fey <kookie@spacekookie>", "Leonora Tindall <nora@nora.codes>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
identity = { version = "0.6", path = "../../ratman/identity", package = "ratman-identity" }
netmod = { version ="0.5.0", path = "../../ratman/netmod", package = "ratman-netmod" }

async-std = { version = "1.0", features = ["attributes", "unstable"] }
async-trait = "0.1"
bincode = "1.0"
byteorder = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-futures = "0.2"
