[package]
name = "netmod-udp"
description = "A UDP overlayed netmod endpoint driver"
version = "0.2.0"
authors = ["Katharina Fey <kookie@spacekookie.de>", "Leonora Tindall <nora@nora.codes>"]
edition = "2018"
license = "AGPL-3.0"

[dependencies]
task-notify = { version = "0.1", path = "../../utils/task-notify" }
netmod = { version ="0.5.0", path = "../../ratman/netmod", package = "ratman-netmod" }
identity = { version = "0.6", path = "../../ratman/identity", package = "ratman-identity" }

async-trait = "0.1"
async-std = { version = "1.0", features = ["unstable"] }
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-futures = "0.2"
