[package]
name = "netmod-wd"
description = "A native network driver that binds wifi direct"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
jni = { version = "0.14", default-features = false }
bincode = "1.0"
netmod = { version = "0.4", path = "../../ratman/netmod", package = "ratman-netmod" }
async-std = { version = "1.0", features = ["unstable"] }
async-trait = "0.1"
