[package]
name = "netmod-wd"
description = "A native network driver that binds wifi direct"
version = "0.2.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
netmod = { version ="0.5.0", path = "../../ratman/netmod", package = "ratman-netmod" }
async-std = { version = "1.0", features = ["unstable"] }
async-trait = "0.1"
