[package]
name = "netmod-wd"
description = "A native network driver that binds wifi direct on Android"
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
libratman = { version = "0.6", path = "../../ratman/libratman" }
async-std = { version = "1.0", features = ["unstable"] }
async-trait = "0.1"
