[package]
name = "ratman-client"
description = "IPC library to interact with a Ratman daemon"
version = "0.3.2"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
async-std = { version = "1.0", features = ["attributes"] }
types = { path = "../types", version = "0.3.0", package = "ratman-types" }
thiserror = "1.0"
futures-lite = "1.0"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.2"