[package]
name = "ratman-client"
description = "IPC library to interact with a Ratman daemon"
version = "0.4.0"
edition = "2018"
license = "GPL-3.0-or-later"
readme = "README.md"

[dependencies]
async-std = { version = "1.0", features = ["attributes"] }
types = { path = "../types", version = "0.4.0", package = "ratman-types" }
thiserror = "1.0"
futures-lite = "1.0"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = "0.2"