[package]
name = "ratman-configure"
description = "A configuration wrapper to create and manage ratman interface hubs"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
async-std = { version = "1.0", features = ["attributes"] }
netmod-mem = { version = "0.1" } # TODO: update this dependency
netmod-tcp = { version = "0.2", path = "../../netmods/netmod-tcp" }
netmod-udp = { version = "0.1", path = "../../netmods/netmod-udp" }
ratman = { version = "0.1", path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
android = []