[package]
name = "ratman-configure"
description = "A configuration wrapper to create and manage ratman interface hubs"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
async-std = { version = "1.0", features = ["attributes"] }
netmod-inet = { version ="0.4.0", path = "../../netmods/netmod-inet" }
netmod-lan = { version ="0.2.0", path = "../../netmods/netmod-lan" }
ratman = { version ="0.3.0", path = ".." }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
android = []
