[package]
name = "libratmandroid"
description = "An FFI shim around ratman for its implementation on android"
version = "0.0.1"
edition = "2021"

[lib]
name = "ratmandroid"
crate-type = ["cdylib"]

[dependencies]
jni = { version  = "0.19.0", optional = false, default-features = false }
ratman-client = { version = "0.4.0", path = "../lib-client/", optional = false }