[package]
name = "ratman-harness"
description = "A testing harness for applications that use ratman networks in memory"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[dependencies]
arbitrary = "1.0"
ratman = { version = "0.2", path = ".." }
netmod-mem = { version = "0.4", path = "../../netmods/netmod-mem" }
tempfile = "3.0"
