[package]
name = "ratman-identity"
description = "Network identity abstraction for Ratman routers and drivers"
version = "0.6.2"
authors = ["Katharina Fey <kookie@spacekookie.de>"]
edition = "2018"
license = "AGPL-3.0-or-later"

[package.metadata.docs.rs]
all-features = true

[features]
digest = ["blake2"]
random = ["rand"]
aligned = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
blake2 = { version = "0.9.0", optional = true }
rand = { version = "0.7", optional = true }
cfg-if = "1.0"
hex = "0.4"

[dev-dependencies]
serde_json = "1.0"
bincode = "1.2"
