[package]
name = "ratman-netmod"
description = "Interface and framing abstraction for Ratman network drivers"
version = "0.5.1"
edition = "2018"
license = "AGPL-3.0"

[dependencies]
ratman-types = { version = "0.4.0", path = "../lib-types" }

serde = { version = "1.0", features = ["derive"] }
twox-hash = "1.5"
async-trait = "0.1"
